added content to test page

--- a/src/app.html
+++ b/src/app.html
@@ -41,20 +41,45 @@
         </ul>
     </div>
 
-    <table id="user-table" class="hide">
-        <tr>
-            <th>Name</th>
-            <th>Email</th>
-        </tr>
-        <tr>
-            <td>John Doe</td>
-            <td>john.doe@example.com</td>
-        </tr>
-        <tr>
-            <td>Jane Smith</td>
-            <td>jane.smith@example.com</td>
-        </tr>
-    </table>
+    <div id="user-table" class="bottom-space hide">
+        <label for="user-table">Users</label>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+            </tr>
+            <tr>
+                <td>John Doe</td>
+                <td>john.doe@example.com</td>
+            </tr>
+            <tr>
+                <td>Jane Smith</td>
+                <td>jane.smith@example.com</td>
+            </tr>
+            <tr>
+                <td>Jeff Morton</td>
+                <td>jeff.morton@morton22.com</td>
+            </tr>
+        </table>
+    </div>
+
+    <div id="admin-table" class="bottom-space hide">
+        <label for="admin-table">Admins</label>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+            </tr>
+            <tr>
+                <td>Styx Lmao</td>
+                <td>styx_lm@o.com</td>
+            </tr>
+            <tr>
+                <td>Astro FF</td>
+                <td>astro.ff@gmx.de</td>
+            </tr>
+        </table>
+    </div>
 </div>
 </body>
 </html>
